// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Counter snapshot renders 1`] = `
<div>
  <p>
    1
  </p>
</div>
`;

exports[`App snapshot renders 1`] = `
<div>
  App me down!
  <div>
    <p>
      0
    </p>
  </div>
  <button
    onClick={[Function]}
    type="button"
  >
    increment
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    deccrement
  </button>
</div>
`;
